# multicontact_control

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  test_box.world
app/conf/: bigman_config.ini
include/: math_utilities.hpp
include/multicontact/: multicontact.h  multicontact_module_thread.h
include/utils/: utils.h
include/wb_interface/: wb_interface.h
src/: multicontact_module.hpp  multicontact_module_main.cpp  multicontact_module_thread.cpp  multicontact_module_thread.h
src/utils/: utils.cpp
src/wb_interface/: wb_interface.cpp
